Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,7 @@ parameters:
     default: 001,002
   - name: CRID
     type: string
+    default: ''
 
 steps:
   - task: BuildTask-ManualDeploy-PodTenant@0
